2014-07-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/dir.c (dir_entry_of_infodir)
	* info/footnotes.c (make_footnotes_node) 
	* info/session.c (info_intuit_options_node): Free return value of
	info_get_node.

	* info/info.c (add_initial_nodes): Free a string.

	* info/session.c (info_goto_invocation_node): Don't use
	info_error_was_printed to check for an error.
	(dump_node_to_stream): Free NODE object at more exit points from
	function.
	(info_search_internal): Free variable before exiting function.

2014-07-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (node_printed_rep): Keep pointer to storage to
	returned string in static pointer to avoid memory leaks by callers.
	(info_menu_sequence): Don't clear echo area if there was an error
	message.  If a component in the sequence is invalid, go to the last
	node reached.

2014-07-05  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.h (NODE): Fields 'parent', 'filename' removed.  Fields
	'fullpath', 'subfile' added.
	(N_Subfile): New symbol.
	
	* info/nodes.c (info_load_file): Arguments changed.  Callers updated.
	Set N_Subfile flag for subfiles.

	* info/nodes.c (init_file_buffer_tag, get_nodes_of_info_file)
	(get_nodes_of_tag_table, info_create_node, get_filename_and_nodename)
	(info_get_node_of_file_buffer, info_node_of_tag)
	* info/dir.c (build_dir_node)
	* info/footnotes.c (make_footnotes_node)
	* info/indices.c (create_virtindex_node)
	* info/info-utils.c (name_internal_node)
	* info/info.c (add_initial_nodes, allfiles_create_node)
	* info/infodoc.c (info_get_info_help_node)
	* info/man.c (get_manpage_node)
	* info/session.c (info_handle_pointer, info_follow_menus)
	(info_menu_sequence, node_printed_rep, info_intuit_options_node)
	(info_goto_invocation_node, info_display_file_info)
	(file_buffer_of_window, info_search_internal)
	* info/window.c (window_make_modeline):
	Access changed fields of NODE objects.  Use fullpath field