@@ -1,5 +1,13 @@
 2014-07-05  Gavin Smith  <gavinsmith0123@gmail.com>
 
+	* info/info-utils.c (parse_top_node_line): Free string before loop
+	exit.
+	* info/infopath.c (infopath_add_dir): Free argument if not retained.
+	(build_infopath_from_path): Call infopath_add_dir instead of
+	infopath_add.
+
+2014-07-05  Gavin Smith  <gavinsmith0123@gmail.com>
+
 	* info/dir.c (dir_entry_of_infodir)
 	* info/footnotes.c (make_footnotes_node) 
 	* info/session.c (info_intuit_options_node): Free return value of
